--- a/TaskExplorer/Forms/SettingsWindow.ui
+++ b/TaskExplorer/Forms/SettingsWindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>573</width>
-    <height>496</height>
+    <height>516</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -274,6 +274,16 @@
             <widget class="QCheckBox" name="chkMaxThread">
              <property name="text">
               <string>Show also highest thread CPU usage in CPU column</string>
+             </property>
+            </widget>
+           </item>
+           <item row="9" column="2">
+            <widget class="QCheckBox" name="chkFusionTheme">
+             <property name="text">
+              <string>Use Fusion Theme</string>
+             </property>
+             <property name="tristate">
+              <bool>true</bool>
              </property>
             </widget>
            </item>
