--- a/TaskExplorer/Resources/TaskExplorer.qrc
+++ b/TaskExplorer/Resources/TaskExplorer.qrc
@@ -81,6 +81,11 @@
         <file alias="CaseSensitive">Actions/CaseSensitive.png</file>
         <file alias="Highlight">Actions/Highlight.png</file>
         <file alias="RegExp">Actions/RegExp.png</file>
+        <file alias="GUI">Actions/GUI.png</file>
+        <file alias="Design">Actions/Design.png</file>
+        <file alias="Config">Actions/Config2.png</file>
+        <file alias="Options">Actions/Options.png</file>
+        <file alias="MiscOptions">Actions/Settings.png</file>
     </qresource>
     <qresource prefix="/NtObjects">
         <file alias="Device">NtObjects/device16.png</file>
